css/style-vers12.css
/* John Baskerville CSS  */  


/* Adding Reset */

        * {
           
            margin: 0;
            padding: 0;
            font-size: 100%;
            font-weight: normal;
            
            
        }
        
        body {
            
            background-color: #FFFADE; /* #fcf4dc; */
            font-family: 'Libre Baskerville', Baskerville, Georgia, serif;
            color: #222222;  

            
            
        }


/*
        article {
         
min-width: 300px
max-width: 760px;
            
        }
*/


        
        h1 {
            
            font-size: 2.827em;
            margin: 40px;
            margin-bottom: 0;
            letter-spacing: 5px;
            
            
        }
        
        
        h2 {
            
            font-size: 1.999em;
            padding: 40px;
            
        }
        
        
        h1, h2, h3 {
            
            font-weight: normal;
            text-align: center;
            
        }
        
        
        h2#subtitle {
         
            padding: 20px;
            
        }
        
        p {
            
            margin: 0 auto; 
            padding: 10px 0px;
            line-height: 1.5;
            font-size: 1em;

            
        }
        
        
        
        p#intro {
         
            font-size: 1.414em;
            text-align: center;
            padding: 40px;
            
        }
        
        
        p#intro, h2#subtitle {
            
         font-style: italic;   
            
        }
        
        strong, ul {
            
         font-weight: normal;   
            
        }
        
        

        
        ul {
            
        padding: 20px 0px;
        width: 70%;
        margin: 0 auto;
        text-align: center;
            
            
        }
        




        ul li {
            
            list-style: none;
            text-transform: uppercase;
            letter-spacing: 2px;
            

            
        }
        
        
                ul li strong { font-weight: 600; }
        
        
        ul li li {
         
            list-style: none;
            text-transform: none;
            padding: 10px;
            border-bottom: 1px solid #d5d5d5;

            
        }


        li.border_top {
            
            border-top: 1px solid #d5d5d5;
            
            
        }
        
        
        
        
        
        h1, nav a {
            
            text-transform: uppercase;
            
        }
        
        
        strong {
         
            font-weight: 600;
            
        }
        
        
                a {
            
            color: #CC0433;
            text-decoration: none;
            text-transform: uppercase;
            text-transform: none;
            
        }
        
        
        a:hover {
            
        
            color: navy;
            
        }
        
        
        nav {
            
            border-top: 1px solid #d5d5d5;
            border-bottom: 1px solid #d5d5d5;
            
        }



        nav a {
            
            letter-spacing: 2px;
            
        }


        
        
        nav ul {
         
    
            text-align: center;
            list-style: none;
            
        }
        
        nav ul li {
            
            display: inline;
            margin: 10px;
            
        }


        
        img {
            
            display: block;
            margin: 0 auto;
            padding-bottom: 40px;
/*            width: 100%;*/
            max-width: 100%; /* resize image so it scale to fit inside parent container */
            
        }

       
        p#portrait {
         
            background-color: black;
            width: 100%;
            padding: 0;
            
            
        }



        #portrait img {
            
            width: auto; /* to stop inheriting from p#portrait */
        
        
        }
        
        
        
        section {
            
            
            width: 70%; 
            margin: 0 auto; 
            
            
        }

        section#intro {
            
            width: 100%;
            border-bottom: 1px solid #d5d5d5;
            
        }
            
        
        blockquote {
         
            margin-top: 60px;
/*            margin-bottom: 40px;*/
            
        }
        
        
        blockquote p {
         
            font-size: 1.414em;
            color: #555;
            border-left: 5px solid #d5d5d5;
            padding-left: 20px;
            
        }
        
        
        cite#blockquote_cite { 
            
            color: #555;
            padding-left: 40px;
            
        }
        
        
 
            
        
        footer {
            
            border-top: 1px solid #d5d5d5;
            padding: 20px;
            font-size: 0.707em;
            
        }


        footer#top img {
            
            width: 60px;
            opacity: 0.3;
            
/*
            padding: 40px;
            text-transform: uppercase;
            text-align: right;
            border-top: none;
            font-size: 1em;
*/
            position: fixed;
            top: 500px;
            right: 50px;
            
        }
        
/*
        
        footer#top a {
            
            text-transform: uppercase;
            letter-spacing: 1px;
            
        }
*/



/*
@media screen and (min-width: 300px) {
    


    
    
        nav {
            
            margin: 0;
            border: none;

            
        }
    
        nav ul { 
            
            width: 400px;
            padding: 0;


            
        }
    
        nav ul li {
            
            display: block;
            padding: 20px;
            border-top: 1px solid #d5d5d5;

        }
    
    
    
}
            
        
*/
        

